--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+        integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
         integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>WebStudio</title>
 </head>
@@ -15,7 +20,7 @@
                 <span class="logo-color">Web</span>
                 Studio
             </a>
-            <nav>
+            <nav class="header-nav">
                 <ul class="header-links">
                     <li><a href="index.html" class="link2">Studio</a></li>
                     <li><a href="portfolio.html" class="link1">Portfolio</a></li>
@@ -35,25 +40,25 @@
 
         <section class="container">
             <div>
-                <h3>ATTENTION TO DETAILS</h3>
+                <h3 style="font-weight: bold;">ATTENTION TO DETAILS</h3>
                 <p>We go into all the details and processes of your business to develop a customized solution.</p>
             </div>
             <div>
-                <h3>PUNCTUALITY</h3>
+                <h3 style="font-weight: bold;">PUNCTUALITY</h3>
                 <p>With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</p>
             </div>
             <div>
-                <h3>PLANNING</h3>
+                <h3 style="font-weight: bold;">PLANNING</h3>
                 <p>You will be able to observe and participate in every phase of solution development and implementation.</p>
             </div>
             <div>
-                <h3>MODERN TECHNOLOGIES</h3>
+                <h3 style="font-weight: bold;">MODERN TECHNOLOGIES</h3>
                 <p>We use innovative tools to solve assigned tasks. It's time to simplify work processes.</p>
             </div>
         </section>
 
         <section>
-            <h1 style="text-align: center;">What we do</h1>
+            <h1 style="text-align: center; font-weight: bold;">What we do</h1>
             <div class="container">
                 <img src="./images/img1.png" alt="imaginea 1">
                 <img src="./images/img2.png" alt="imaginea 2">
@@ -61,27 +66,27 @@
             </div>
         </section>
 
-        <h1 style="text-align: center;">Our Team</h1>
+        <h1 style="text-align: center; font-weight: bold;">Our Team</h1>
         <section class="container">
             <div>
                 <img src="./images/team/team1.jpg" alt="team 1 image" height="200">
-                <h4>Christopher Walker</h4>
-                <p>Product Designer</p>
+                <h4 style="font-weight: bold; text-align: center;">Christopher Walker</h4>
+                <p style="text-align: center;">Product Designer</p>
             </div>
             <div>
                 <img src="./images/team/team2.jpg" alt="team 2 image" height="200">
-                <h4>Kylie Evans</h4>
-                <p>Frontend Developer</p>
+                <h4 style="font-weight: bold; text-align: center;">Kylie Evans</h4>
+                <p style="text-align: center;">Frontend Developer</p>
             </div>
             <div>
                 <img src="./images/team/team3.jpg" alt="team 3 image" height="200">
-                <h4>Ryan Harris</h4>
-                <p>Marketing</p>
+                <h4 style="font-weight: bold; text-align: center;">Ryan Harris</h4>
+                <p style="text-align: center;">Marketing</p>
             </div>
             <div>
                 <img src="./images/team/team4.jpg" alt="team 4 image" height="200">
-                <h4>Tyler Moore</h4>
-                <p>UI Designer</p>
+                <h4 style="font-weight: bold; text-align: center;">Tyler Moore</h4>
+                <p style="text-align: center;">UI Designer</p>
             </div>
         </section>
 
