--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>WebStudio</title>
 </head>
-    <body>
+    <body class="container-principal">
         <header class="header">
             <a href="index.html" class="logo">
                 <span class="logo-color">Web</span>
